feat(follow and unfollow): user can follow each other [Start #167484598]
